# hyprland-state

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/hyprland_state/: __init__.py  _animations.py  _monitors.py  _options.py  _state.py
tests/: conftest.py  test_animations.py  test_monitors.py  test_options.py  test_state.py
