[project]
name = "hyprland-state"
version = "0.2.0"
description = "Live state interface for Hyprland — options, animations, monitors, binds, and devices"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
keywords = ["hyprland", "config", "state", "wayland", "compositor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Typing :: Typed",
]
dependencies = [
    "hyprland-config>=0.3.0",
    "hyprland-monitors>=0.4.0",
    "hyprland-schema>=0.3.0",
    "hyprland-socket>=0.9.0",
]

[project.urls]
Repository = "https://github.com/BlueManCZ/hyprland-state"

[dependency-groups]
dev = ["pyright>=1.1", "pytest>=9.0", "ruff>=0.15"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.sdist]
exclude = ["tests/"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
